# opencau_agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: events.py  loop.py  runtime.py
backend/app/api/: deps.py  events.py  health.py  preflight.py  sessions.py  vnc_proxy.py
backend/app/llm/: base.py  factory.py  function_computer.py  mock.py  normalize.py  openai_computer.py  preflight.py  prompts.py  stateless_function.py  tool_schema.py
backend/app/sandbox/: __init__.py  action_executor.py  client.py  keymap.py
backend/app/schemas/: actions.py  events.py  messages.py  sessions.py
backend/app/storage/: screenshot_store.py  session_store.py  sqlite.py
backend/tests/: test_action_executor.py  test_actions.py  test_agent_loop.py  test_agent_runtime.py  test_events.py  test_function_adapter.py  test_keymap.py  test_llm_normalize.py  test_llm_prompts.py  test_openai_adapter.py  test_preflight.py  test_screenshot_store.py  test_session_schema.py  test_session_store.py  test_sqlite_store.py
docs/: architecture.md  compatibility.md  demo-script.md  security.md  troubleshooting.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  (+1 more)
sandbox/: Dockerfile  entrypoint.sh
sandbox-controller/: Dockerfile  pyproject.toml
sandbox-controller/app/: __init__.py  commands.py  config.py  docker_sandbox.py  main.py  schemas.py
sandbox-controller/tests/: test_commands.py
scripts/: e2e_mock.py  e2e_task.py
(+6 files in other folders)
