[project]
name = "opencau-agent-sandbox-controller"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "docker==7.1.0",
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "uvicorn[standard]==0.34.0",
    "websockets==14.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
